WebQS: - CSS fix for z-index on menu when editing.
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@23310 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 4d27fed129f1f501b044787b5857279d05a2bd05

--- a/root/modules/wcmquickstart/wcmquickstartwebsite/source/web/css/general_styles.css
+++ b/root/modules/wcmquickstart/wcmquickstartwebsite/source/web/css/general_styles.css
@@ -75,7 +75,7 @@ blockquote {
 	float:right;
 	position:relative;
 	left:18px;
-	z-index:90;
+	z-index:1;
 }
 .jqueryslidemenu ul {
 	list-style-type:none;
